code/src/objects/Project_Member__c.object
<CustomObject>
    <description>Members who work on a project.</description>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <description>Hourly Rate of  this person</description>
        <inlineHelpText>Hourly Rate of  this person</inlineHelpText>
        <label>Hourly Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>Name of a project</description>
        <inlineHelpText>Name of a project</inlineHelpText>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Project_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Role of a person on this project</description>
        <inlineHelpText>Role of a person on this project</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person who works on a project</description>
        <inlineHelpText>Person who works on a project</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PT{00000000}</displayFormat>
        <label>Project Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>